# archwise

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  HANDOFF-backend-split.md  README.md  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  vercel.json  vitest.config.ts
backend/: .env.example  .gitignore  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0959f09b00f6_add_layout_overrides_to_architectures.py  0a9a9a9853b4_add_app_settings_table.py  237f1a45049d_add_audit_logs.py  23d128cad90e_projects_user_id_not_null.py  2edae9793a0d_add_project_comments.py  48d9c802a8a8_conversations_created_at_clock_timestamp.py  4cede3b8aa45_add_journey_steps_to_architectures.py  62aa2b5fa4cd_add_project_memberships.py  666de2b686c2_add_webhooks.py  79419797551a_add_suggested_replies_to_conversations.py  7aaaa82be061_migrate_users_to_clerk.py  7c46035c744e_initial_schema.py  8eb0d24f752f_add_users_table_and_project_user_id.py  9f3be55c4f66_add_advanced_feature_usage_limits.py  a4d9e6f18c02_add_share_links.py  a9893b8ef523_add_usage_counters.py  a9d3e7c1b5f4_add_product_domain_to_requirements.py  b9e9dc2cd283_add_security_findings_to_architectures.py  c5c74f583463_add_api_keys.py  c72bfcc1a994_add_feedback_table.py  cc02e5909673_add_conversation_summary_and_flow_story_.py  cc9e3536d012_add_llm_usage_logs.py  d1f6a3b8c4e2_add_knowledge_chunks.py  e27a463290ac_add_knowledge_level_to_projects.py  e2b4f6a8c0d1_add_reference_architecture_support.py  f3a71c9e5b21_add_migration_path_generator_columns.py  f61856b2a418_add_usage_window_bypass_and_limits.py  (+1 more)
backend/app/: config.py  constants.py  db.py  dependencies.py  logging_config.py  main.py  models.py  observability.py  rate_limit.py  redis_client.py  schemas.py  security.py  serializers.py  worker.py
backend/scripts/: backup-db.sh  ingest_knowledge_base.py  ingest_reference_architectures.py  test_retrieval.py
backend/tests/: conftest.py  test_admin.py  test_advanced_feature_gates.py  test_architecture_diff.py  test_architecture_generation.py  test_architectures.py  test_auth.py  test_cloud_mapping.py  test_collaboration.py  test_conversations.py  test_dependencies.py  test_feedback.py  test_industry_rules.py  test_lld_rules.py  test_llm.py  test_nfr_signals.py  test_projects.py  test_public_api.py  test_requirements.py  test_rules_engine.py  test_security_fix.py  test_security_rules.py  test_share.py  test_smoke.py  test_terraform_generator.py  test_usage_limits.py
src/: proxy.ts  (+4 more)
(+182 files in other folders)
