[project]
name = "ai-cloud-architecture-generator-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "redis>=5.2",
    "arq>=0.26",
    "slowapi>=0.1.9",
    "fpdf2>=2.8",
    "pdfplumber>=0.11",
    "fastembed>=0.8",
    "pgvector>=0.3",
    "beautifulsoup4>=4.12",
    "clerk-backend-api>=3.0",
    "resend>=2.5",
    "sentry-sdk[fastapi]>=2.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
