[project]
name = "ai-cloud-architecture-generator-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "redis>=5.2",
    "arq>=0.26",
    "slowapi>=0.1.9",
    "fpdf2>=2.8",
    "pdfplumber>=0.11",
    "fastembed>=0.8",
    "pgvector>=0.3",
    "beautifulsoup4>=4.12",
    "clerk-backend-api>=3.0",
    "resend>=2.5",
    "sentry-sdk[fastapi]>=2.65",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Session-scoped, not the pytest-asyncio default of a fresh loop per test function -- app/db.py's
# async engine (and its asyncpg connection pool) is a MODULE-LEVEL singleton created once at
# import time, before any test's event loop exists. A per-function loop scope would hand that
# same engine a pool of connections bound to test 1's loop, then try to reuse them from test 2's
# *different* loop -- asyncpg raises "Future attached to a different loop" the moment that
# happens. One shared loop for the whole session keeps every test on the same loop the engine
# was (implicitly) created under.
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
